[gd_scene load_steps=17 format=3 uid="uid://bvf8g3vtmafq0"]

[ext_resource type="Script" uid="uid://gbinb1ry81c1" path="res://Menu Scripts/advanced_notes_section.gd" id="1_hl3y6"]
[ext_resource type="Material" uid="uid://dykh6lk1hfo2u" path="res://Menu Shaders/Asset_Color.tres" id="2_04jee"]
[ext_resource type="Texture2D" uid="uid://da8a0h7cnkn5s" path="res://Menu Assets/Group 7.png" id="3_3hnub"]
[ext_resource type="PackedScene" path="res://Menu Scenes/carousel_container_2.tscn" id="4_d3apn"]
[ext_resource type="Texture2D" uid="uid://cnjvlvavntlhk" path="res://Menu Assets/cards v2/Lesson_Cards_001.png" id="5_3xahu"]
[ext_resource type="Texture2D" uid="uid://bm06vk3mfnn88" path="res://Menu Assets/cards v2/Lesson_Cards_002.png" id="6_pofgg"]
[ext_resource type="Texture2D" uid="uid://biicubh00vdyt" path="res://Menu Assets/cards v2/Lesson_Cards_003.png" id="7_wcgb8"]
[ext_resource type="Texture2D" uid="uid://rwgkhha6dj4u" path="res://Menu Assets/cards v2/Lesson_Cards_004.png" id="8_cetvk"]
[ext_resource type="Texture2D" uid="uid://b6m05r7vtdh2j" path="res://Menu Assets/cards v2/Lesson_Cards_005.png" id="9_8dsdw"]
[ext_resource type="Texture2D" uid="uid://1wb7qyfvrcsw" path="res://Menu Assets/cards v2/Lesson_Cards_006.png" id="10_jxjbu"]
[ext_resource type="Texture2D" uid="uid://d1tpmykefv61n" path="res://Menu Assets/cards v2/Lesson_Cards_007.png" id="11_1fuhu"]
[ext_resource type="Texture2D" uid="uid://bew2bm8ubto0n" path="res://Menu Assets/cards v2/Lesson_Cards_008.png" id="12_3jgvv"]
[ext_resource type="Texture2D" uid="uid://58mqs21vlnlr" path="res://Menu Assets/cards v2/Lesson_Cards_009.png" id="13_rdd5w"]
[ext_resource type="Texture2D" uid="uid://dumsyhs000cbh" path="res://Menu Assets/cards v2/Lesson_Cards_010.png" id="14_w1uul"]
[ext_resource type="Texture2D" uid="uid://baxgt8gltobrw" path="res://Menu Assets/Back (1).png" id="15_qke8r"]
[ext_resource type="FontFile" uid="uid://bsdm1pj7st7rm" path="res://Font/Modular Amplitude.otf" id="16_3ua8c"]

[node name="advanced_notes_section" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hl3y6")

[node name="Notes Title" type="TextureRect" parent="."]
material = ExtResource("2_04jee")
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -431.0
offset_top = -184.0
offset_right = 431.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_3hnub")

[node name="CarouselContainer2" parent="." node_paths=PackedStringArray("position_offset_node") instance=ExtResource("4_d3apn")]
position = Vector2(-64, 536)
scale = Vector2(1.05905, 1.05905)
spacing = -57.0
scale_strength = 0.193
scale_min = 0.01
position_offset_node = NodePath("Control")

[node name="Control" type="Control" parent="CarouselContainer2"]
layout_mode = 3
anchors_preset = 0
offset_left = 205.5
offset_right = 245.5
offset_bottom = 40.0

[node name="Notes11" type="TextureButton" parent="CarouselContainer2/Control"]
z_index = 1
material = ExtResource("2_04jee")
layout_mode = 0
offset_top = -367.0
offset_right = 1102.0
offset_bottom = 367.0
pivot_offset = Vector2(551, 367)
texture_normal = ExtResource("5_3xahu")

[node name="Notes12" type="TextureButton" parent="CarouselContainer2/Control"]
modulate = Color(1, 1, 1, 0.65)
z_index = -1
material = ExtResource("2_04jee")
layout_mode = 0
offset_left = 1045.0
offset_top = -322.0
offset_right = 2121.0
offset_bottom = 322.0
scale = Vector2(0.807, 0.807)
pivot_offset = Vector2(538, 322)
focus_mode = 0
mouse_filter = 2
texture_normal = ExtResource("6_pofgg")

[node name="Notes13" type="TextureButton" parent="CarouselContainer2/Control"]
modulate = Color(1, 1, 1, 0.65)
z_index = -2
material = ExtResource("2_04jee")
layout_mode = 0
offset_left = 2064.0
offset_top = -322.0
offset_right = 3140.0
offset_bottom = 322.0
scale = Vector2(0.807, 0.807)
pivot_offset = Vector2(538, 322)
focus_mode = 0
mouse_filter = 2
texture_normal = ExtResource("7_wcgb8")

[node name="Notes14" type="TextureButton" parent="CarouselContainer2/Control"]
modulate = Color(1, 1, 1, 0.65)
z_index = -3
material = ExtResource("2_04jee")
layout_mode = 0
offset_left = 3083.0
offset_top = -322.0
offset_right = 4159.0
offset_bottom = 322.0
scale = Vector2(0.807, 0.807)
pivot_offset = Vector2(538, 322)
focus_mode = 0
mouse_filter = 2
texture_normal = ExtResource("8_cetvk")

[node name="Notes15" type="TextureButton" parent="CarouselContainer2/Control"]
modulate = Color(1, 1, 1, 0.65)
z_index = -4
material = ExtResource("2_04jee")
layout_mode = 0
offset_left = 4102.0
offset_top = -322.0
offset_right = 5178.0
offset_bottom = 322.0
scale = Vector2(0.807, 0.807)
pivot_offset = Vector2(538, 322)
focus_mode = 0
mouse_filter = 2
texture_normal = ExtResource("9_8dsdw")

[node name="Notes16" type="TextureButton" parent="CarouselContainer2/Control"]
modulate = Color(1, 1, 1, 0.65)
z_index = -5
material = ExtResource("2_04jee")
layout_mode = 0
offset_left = 5121.0
offset_top = -322.0
offset_right = 6197.0
offset_bottom = 322.0
scale = Vector2(0.807, 0.807)
pivot_offset = Vector2(538, 322)
focus_mode = 0
mouse_filter = 2
texture_normal = ExtResource("10_jxjbu")

[node name="Notes17" type="TextureButton" parent="CarouselContainer2/Control"]
modulate = Color(1, 1, 1, 0.65)
z_index = -6
material = ExtResource("2_04jee")
layout_mode = 0
offset_left = 6140.0
offset_top = -322.0
offset_right = 7216.0
offset_bottom = 322.0
scale = Vector2(0.807, 0.807)
pivot_offset = Vector2(538, 322)
focus_mode = 0
mouse_filter = 2
texture_normal = ExtResource("11_1fuhu")

[node name="Notes18" type="TextureButton" parent="CarouselContainer2/Control"]
modulate = Color(1, 1, 1, 0.65)
z_index = -7
material = ExtResource("2_04jee")
layout_mode = 0
offset_left = 7159.0
offset_top = -322.0
offset_right = 8235.0
offset_bottom = 322.0
scale = Vector2(0.807, 0.807)
pivot_offset = Vector2(538, 322)
focus_mode = 0
mouse_filter = 2
texture_normal = ExtResource("12_3jgvv")

[node name="Notes19" type="TextureButton" parent="CarouselContainer2/Control"]
modulate = Color(1, 1, 1, 0.65)
z_index = -8
material = ExtResource("2_04jee")
layout_mode = 0
offset_left = 8178.0
offset_top = -322.0
offset_right = 9254.0
offset_bottom = 322.0
scale = Vector2(0.807, 0.807)
pivot_offset = Vector2(538, 322)
focus_mode = 0
mouse_filter = 2
texture_normal = ExtResource("13_rdd5w")

[node name="Notes20" type="TextureButton" parent="CarouselContainer2/Control"]
modulate = Color(1, 1, 1, 0.65)
z_index = -9
material = ExtResource("2_04jee")
layout_mode = 0
offset_left = 9197.0
offset_top = -322.0
offset_right = 10273.0
offset_bottom = 322.0
scale = Vector2(0.807, 0.807)
pivot_offset = Vector2(538, 322)
focus_mode = 0
mouse_filter = 2
texture_normal = ExtResource("14_w1uul")

[node name="Back" type="TextureButton" parent="."]
material = ExtResource("2_04jee")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.092
anchor_top = 0.083
anchor_right = 0.092
anchor_bottom = 0.083
offset_left = -43.64
offset_top = -44.64
offset_right = 110.36
offset_bottom = 115.36
scale = Vector2(0.554455, 0.554455)
texture_normal = ExtResource("15_qke8r")

[node name="Free" type="Button" parent="."]
offset_left = 200.0
offset_top = 896.0
offset_right = 565.0
offset_bottom = 1036.0
scale = Vector2(0.609104, 0.609104)
theme_override_fonts/font = ExtResource("16_3ua8c")
theme_override_font_sizes/font_size = 126
text = "FREE"

[node name="Advanced" type="Button" parent="."]
offset_left = 1376.0
offset_top = 896.0
offset_right = 2159.0
offset_bottom = 1036.0
scale = Vector2(0.609104, 0.609104)
theme_override_fonts/font = ExtResource("16_3ua8c")
theme_override_font_sizes/font_size = 126
text = "ADVANCED"

[connection signal="pressed" from="CarouselContainer2/Control/Notes11" to="." method="_on_notes_1_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes11" to="." method="_on_notes_11_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes12" to="." method="_on_notes_2_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes12" to="." method="_on_notes_12_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes13" to="." method="_on_notes_3_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes13" to="." method="_on_notes_13_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes14" to="." method="_on_notes_4_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes14" to="." method="_on_notes_14_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes15" to="." method="_on_notes_5_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes15" to="." method="_on_notes_15_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes16" to="." method="_on_notes_6_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes16" to="." method="_on_notes_16_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes17" to="." method="_on_notes_7_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes17" to="." method="_on_notes_17_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes18" to="." method="_on_notes_8_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes18" to="." method="_on_notes_18_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes19" to="." method="_on_notes_9_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes19" to="." method="_on_notes_19_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes20" to="." method="_on_notes_10_pressed"]
[connection signal="pressed" from="CarouselContainer2/Control/Notes20" to="." method="_on_notes_20_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Free" to="." method="_on_free_pressed"]
